--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-awesome-button": "^7.0.5",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-images-uploading": "^3.1.7",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
